--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,123 +4,38 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>ClaimWrit – Privacy Policy</title>
-
-  <!-- Main stylesheet -->
   <link rel="stylesheet" href="styles.css"/>
-
-  <!-- Optional FontAwesome (remove if unused) -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-  />
-
-  <!-- Remove default focus outlines; add accessible focus-visible -->
-  <style>
-    a:focus, button:focus, input:focus, textarea:focus, select:focus {
-      outline: none;
-    }
-    :focus-visible {
-      outline: 2px dashed #bfa15d;
-      outline-offset: 3px;
-    }
-  </style>
 </head>
 <body>
   <!-- NAVIGATION -->
   <nav class="nav-bar">
     <ul>
-      <li><a href="index.html"       class="nav-link">Home</a></li>
-      <li><a href="mission.html"     class="nav-link">Our Mission</a></li>
-      <li><a href="services.html"    class="nav-link">How We Help</a></li>
+      <li><a href="index.html"          class="nav-link">Home</a></li>
+      <li><a href="mission.html"        class="nav-link">Our Mission</a></li>
+      <li><a href="services.html"       class="nav-link">How We Help</a></li>
       <li><a href="sample-request.html" class="nav-link">Sample Request</a></li>
-      <li><a href="contact.html"     class="nav-link">Contact</a></li>
-      <li><a href="client-upload.html" class="nav-link">Client Upload</a></li>
+      <li><a href="contact.html"        class="nav-link">Contact</a></li>
+      <li><a href="client-upload.html"  class="nav-link">Client Portal</a></li>
       <li><a href="privacy-policy.html" class="nav-link active">Privacy Policy</a></li>
     </ul>
   </nav>
 
-  <!-- LOGO + TAGLINE -->
+  <!-- LOGO HEADER -->
   <header class="logo-header">
-    <img
-      src="images/ClaimWrit-Logo.jpg"
-      alt="ClaimWrit Logo – Clarity · Structure · Resolution"
-      class="logo"
-    />
+    <img src="images/ClaimWrit-Logo.jpg" class="logo" alt="ClaimWrit Logo"/>
     <p class="subline">Clarity · Structure · Resolution</p>
   </header>
 
   <!-- MAIN CONTENT -->
-  <main class="section" id="privacy-policy">
+  <main class="section">
     <h2>Privacy Policy</h2>
     <p><em>Effective Date: April 27, 2024</em></p>
-
-    <p>
-      ClaimWrit, a d/b/a of Envisage Companies LLC, is committed to protecting your privacy in accordance with HIPAA and applicable Florida law, including FIPA. This policy outlines what data we collect, how we protect it, and your rights.
-    </p>
-
-    <h3>Information We Collect</h3>
-    <ul>
-      <li>Personal Identifying Information (e.g., name, law firm, phone number, email address)</li>
-      <li>Protected Health Information (PHI) uploaded to our client portal</li>
-      <li>Usage details and communication history</li>
-    </ul>
-
-    <h3>How We Collect It</h3>
-    <p>
-      We collect data through secure website forms, our client-upload portal, and direct correspondence such as phone, email, or intake calls.
-    </p>
-
-    <h3>How We Protect It</h3>
-    <p>
-      All data is encrypted using <strong>TLS during transmission</strong> and <strong>AES-256 at rest</strong>. Access is limited to authorized personnel only. Search engine indexing is blocked to help protect submitted documents.
-    </p>
-
-    <h3>How We Use It</h3>
-    <p>
-      We use submitted data exclusively to fulfill your request for services, including demand-letter drafting, lien reductions, and follow-up communications. We do not share or sell your information.
-    </p>
-
-    <h3>Third-Party Services</h3>
-    <p>
-      We may use secure third-party platforms (such as Netlify or WordPress plugins) to deliver services. These services are contractually obligated to comply with data protection requirements.
-    </p>
-
-    <h3>Analytics & Cookies</h3>
-    <p>
-      This site may use cookies or analytics tools to improve performance and usability. These tools do not collect or process PHI.
-    </p>
-
-    <h3>Retention Period</h3>
-    <p>
-      We retain uploaded or submitted data for the duration of your engagement and archive it afterward in accordance with applicable retention requirements.
-    </p>
-
-    <h3>Your Rights</h3>
-    <p>
-      You may request access to, correction of, or deletion of your information by contacting <a href="mailto:legal@claimwrit.com">legal@claimwrit.com</a>.
-    </p>
-
-    <h3>Breach Notification</h3>
-    <p>
-      ClaimWrit follows HIPAA and FIPA breach-notification requirements. In the rare event of a covered incident, clients will be notified within 30 days in accordance with applicable laws.
-    </p>
-
-    <h3>Children’s Privacy</h3>
-    <p>
-      This site is not intended for individuals under the age of 13. We do not knowingly collect personal information from minors.
-    </p>
-
-    <h3>Policy Updates</h3>
-    <p>
-      This policy may be updated periodically. All updates will be posted to this page with a revised effective date.
-    </p>
-
-    <a href="index.html" class="btn">← Back to Website</a>
+    <!-- full policy text here -->
   </main>
 
   <!-- FOOTER -->
   <footer class="site-footer">
-    <p>© 2025 ClaimWrit d/b/a Envisage Companies LLC · Fort Lauderdale, FL</p>
+    <p>© 2025 ClaimWrit · Fort Lauderdale, FL</p>
   </footer>
 </body>
 </html>
