--- a/mission.html
+++ b/mission.html
@@ -3,87 +3,63 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>ClaimWrit – Our Mission & Expertise</title>
-
-  <!-- Shared styles -->
+  <title>Our Mission &amp; Expertise – ClaimWrit</title>
   <link rel="stylesheet" href="styles.css"/>
-
-  <!-- Remove default focus outlines; keep accessible focus-visible -->
-  <style>
-    a:focus, button:focus, input:focus, textarea:focus, select:focus {
-      outline: none;
-    }
-    :focus-visible {
-      outline: 2px dashed #bfa15d;
-      outline-offset: 3px;
-    }
-  </style>
 </head>
 <body>
-  <!-- NAVIGATION -->
-  <nav class="nav-bar">
-    <ul>
-      <li><a href="index.html"            class="nav-link">Home</a></li>
-      <li><a href="mission.html"          class="nav-link active">Our Mission</a></li>
-      <li><a href="services.html"         class="nav-link">How We Help</a></li>
-      <li><a href="sample-request.html"   class="nav-link">Sample Request</a></li>
-      <li><a href="contact.html"          class="nav-link">Contact</a></li>
-      <li><a href="client-upload.html"    class="nav-link">Client Upload</a></li>
-    </ul>
-  </nav>
+  <div data-include="nav.html"></div>
 
-  <!-- LOGO + TAGLINE -->
   <header class="logo-header">
-    <img
-      src="images/ClaimWrit-Logo.jpg"
-      alt="ClaimWrit Logo — Clarity · Structure · Resolution"
-      class="logo"
-    />
+    <img src="images/ClaimWrit-Logo.jpg" alt="ClaimWrit Logo" class="logo"/>
     <p class="subline">Clarity · Structure · Resolution</p>
   </header>
 
-  <!-- MAIN CONTENT -->
-  <main id="mission" class="section">
+  <main class="section">
     <h2>Our Mission &amp; Expertise</h2>
 
     <h3>Our Commitment to Legal Precision</h3>
     <p>
-      At ClaimWrit, clarity of purpose, structural precision, and prompt resolution undergird our legal support services. We are dedicated to equipping counsel with meticulously drafted demand letters and comprehensive post-settlement solutions engineered to streamline workflow, optimize client recoveries, and expedite the orderly resolution of claims.
+      At ClaimWrit, clarity of purpose, structural precision, and prompt
+      resolution undergird our legal support services.
     </p>
 
     <h3>Our Expertise</h3>
     <ul>
       <li>
-        <strong>Strategic Demand-Letter Preparation</strong> — Fully litigation-ready demand letters integrating liability analysis with precise damages computations. Every medical chronology is reviewed to ensure all documented injuries, diagnostic findings, and physician observations are accurately reflected.
+        <strong>Strategic Demand-Letter Preparation</strong> — Litigation-ready
+        letters integrating liability analysis with precise damages.
       </li>
       <li>
-        <strong>Post-Settlement Medical Reduction Requests</strong> — We analyze subrogation, health-insurance EOBs, and statutory liens to secure the most favorable reductions for clients.
+        <strong>Post-Settlement Medical Reductions</strong> — Subrogation,
+        EOBs, and lien analysis for best client outcomes.
       </li>
       <li>
-        <strong>Client Balance Verification &amp; Closing Statements</strong> — Detailed balance verifications and closing statements crafted with financial accuracy for smooth file closure.
+        <strong>Balance Verification &amp; Closing Statements</strong> —
+        Financially accurate file-closing documents.
       </li>
     </ul>
 
     <h3>Quality Control: Every Document, Double-Checked</h3>
     <p>
-      Every deliverable undergoes a dual-phase QA process—ensuring accuracy, persuasiveness, and error-free copy.
+      Dual-phase QA ensures each deliverable is accurate, persuasive, and
+      error-free.
     </p>
 
     <h3>Flexible Engagement &amp; Pricing</h3>
     <p>
-      ClaimWrit supports flat-fee demand-letter drafting or hourly post-settlement services—tailored to your firm’s needs.
+      Flat-fee demand letters or hourly post-settlement work—tailored to
+      your firm’s needs.
     </p>
 
     <h3>Trusted Legal Support for Law Firms</h3>
     <p>
-      ClaimWrit serves as a steadfast partner to counsel—empowering attorneys with expert drafting, operational support, and streamlined claim-closure solutions.
+      ClaimWrit partners with counsel—delivering expert drafting,
+      operational efficiency, and streamlined claim resolution.
     </p>
   </main>
 
-  <!-- FOOTER -->
-  <footer class="site-footer">
-    <p>© 2025 ClaimWrit d/b/a Envisage Companies LLC · Fort Lauderdale, FL</p>
-    <p><a href="privacy-policy.html">Privacy Policy</a></p>
-  </footer>
+  <div data-include="footer.html"></div>
+  <!-- loader script -->
+  <script src="include-loader.js"></script>
 </body>
 </html>
