--- a/request-sample.html
+++ b/request-sample.html
@@ -2,34 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>ClaimWrit – Sample Request</title>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <!-- NAVIGATION -->
-  <nav class="nav-bar">
-    <ul>
-      <li><a href="index.html"            class="nav-link">Home</a></li>
-      <li><a href="mission.html"          class="nav-link">Our Mission</a></li>
-      <li><a href="services.html"         class="nav-link">How We Help</a></li>
-      <li><a href="sample-request.html"   class="nav-link active">Sample Request</a></li>
-      <li><a href="contact.html"          class="nav-link">Contact</a></li>
-      <li><a href="client-upload.html"    class="nav-link">Client Upload</a></li>
-    </ul>
-  </nav>
+  <div data-include="nav.html"></div>
 
-  <!-- LOGO HEADER -->
   <header class="logo-header">
-    <img
-      src="images/ClaimWrit-Logo.jpg"
-      alt="ClaimWrit Logo — Clarity · Structure · Resolution"
-      class="logo"
-    />
+    <img src="images/ClaimWrit-Logo.jpg"
+         alt="ClaimWrit Logo — Clarity · Structure · Resolution"
+         class="logo"/>
     <p class="subline">Clarity · Structure · Resolution</p>
   </header>
 
-  <!-- SAMPLE REQUEST FORM -->
   <main class="section">
     <h2>Request a Sample Demand Letter</h2>
     <p>Submit your information below to receive a complimentary redacted demand letter.</p>
@@ -49,17 +35,17 @@
       <label for="firm">Law Firm (optional)</label>
       <input type="text" id="firm" name="firm"/>
 
-      <label for="demandType">Type of Sample Demand *</label>
+      <label for="demandType">Type of Sample Demand Requested *</label>
       <select id="demandType" name="demandType" required>
         <option value="">-- Please choose an option --</option>
         <option value="Bodily Injury - Auto (MVA)">Bodily Injury - Auto (MVA)</option>
         <option value="Passenger Injury - Auto (MVA)">Passenger Injury - Auto (MVA)</option>
         <option value="Global Demand - Multiple Clients (MVA)">Global Demand - Multiple Clients (MVA)</option>
         <option value="Uninsured Motorist">Uninsured Motorist</option>
-        <option value="Trip & Fall">Trip & Fall</option>
-        <option value="Slip & Fall">Slip & Fall</option>
+        <option value="Trip &amp; Fall">Trip &amp; Fall</option>
+        <option value="Slip &amp; Fall">Slip &amp; Fall</option>
         <option value="Premises Liability - Waterpark">Premises Liability - Waterpark</option>
-        <option value="Assault & Battery">Assault & Battery</option>
+        <option value="Assault &amp; Battery">Assault &amp; Battery</option>
         <option value="Scooter Hit by Vehicle">Scooter Hit by Vehicle</option>
         <option value="Wrongful Death">Wrongful Death</option>
       </select>
@@ -68,10 +54,7 @@
     </form>
   </main>
 
-  <!-- FOOTER -->
-  <footer class="site-footer">
-    <p>© 2020 ClaimWrit d/b/a Envisage Companies LLC · Fort Lauderdale, FL</p>
-    <p><a href="privacy-policy.html">Privacy Policy</a></p>
-  </footer>
+  <div data-include="footer.html"></div>
+  <script src="include-loader.js"></script>
 </body>
 </html>
