--- a/thank-you.html
+++ b/thank-you.html
@@ -2,86 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Thank You – ClaimWrit</title>
-
-  <!-- Shared styles -->
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>ClaimWrit – Thank You</title>
   <link rel="stylesheet" href="styles.css"/>
-
-  <!-- Icons & fonts -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-  />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
-    rel="stylesheet"
-  />
-
-  <!-- Remove default blue outlines; keep focus-visible -->
-  <style>
-    a:focus, button:focus, input:focus, textarea:focus {
-      outline: none;
-    }
-    :focus-visible {
-      outline: 2px dashed #bfa15d;
-      outline-offset: 3px;
-    }
-  </style>
 </head>
 <body>
   <!-- NAVIGATION -->
   <nav class="nav-bar">
     <ul>
-      <li><a href="index.html"            class="nav-link">Home</a></li>
-      <li><a href="mission.html"          class="nav-link">Our Mission</a></li>
-      <li><a href="services.html"         class="nav-link">How We Help</a></li>
-      <li><a href="sample-request.html"   class="nav-link active">Sample Request</a></li>
-      <li><a href="contact.html"          class="nav-link">Contact Us</a></li>
-      <li><a href="client-upload.html"    class="nav-link">Client Portal</a></li>
+      <li><a href="index.html"          class="nav-link">Home</a></li>
+      <li><a href="mission.html"        class="nav-link">Our Mission</a></li>
+      <li><a href="services.html"       class="nav-link">How We Help</a></li>
+      <li><a href="sample-request.html" class="nav-link active">Sample Request</a></li>
+      <li><a href="contact.html"        class="nav-link">Contact</a></li>
+      <li><a href="client-upload.html"  class="nav-link">Client Portal</a></li>
+      <li><a href="privacy-policy.html" class="nav-link">Privacy Policy</a></li>
     </ul>
   </nav>
 
-  <!-- LOGO & TAGLINE -->
+  <!-- LOGO HEADER -->
   <header class="logo-header">
-    <img
-      src="images/ClaimWrit-Logo.jpg"
-      alt="ClaimWrit Logo — Clarity · Structure · Resolution"
-      class="logo"
-    />
+    <img src="images/ClaimWrit-Logo.jpg" class="logo" alt="ClaimWrit Logo"/>
     <p class="subline">Clarity · Structure · Resolution</p>
   </header>
 
-  <!-- PAGE HEADER -->
-  <section class="page-header">
-    <h1>Thank You</h1>
-  </section>
-
-  <!-- CONTENT -->
-  <section class="content-section">
-    <div class="success-box">
-      <i class="fas fa-check-circle success-icon"></i>
-      <h2>Your Request Has Been Received</h2>
-      <p>We've successfully received your submission and will process it shortly.</p>
-
-      <h3>What Happens Next:</h3>
-      <ol class="next-steps">
-        <li>We review your request within 24 hours</li>
-        <li>You receive the sample demand letter via email</li>
-        <li>We follow up to discuss next steps</li>
-      </ol>
-
-      <div class="btn-container">
-        <a href="index.html" class="btn">Return to Homepage</a>
-        <a href="contact.html" class="btn btn-light">Contact Us</a>
-      </div>
-    </div>
-  </section>
+  <!-- MAIN CONTENT -->
+  <main class="section">
+    <h2>Thank You</h2>
+    <p>Your request has been received and we will be in touch shortly.</p>
+    <a href="index.html" class="btn">Back to Home</a>
+  </main>
 
   <!-- FOOTER -->
   <footer class="site-footer">
-    <p>© 2025 ClaimWrit d/b/a Envisage Companies LLC · Fort Lauderdale, FL</p>
-    <p><a href="privacy-policy.html">Privacy Policy</a></p>
+    <p>© 2025 ClaimWrit · Fort Lauderdale, FL</p>
   </footer>
 </body>
 </html>
