--- a/sample-request.html
+++ b/sample-request.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ClaimWrit – Sample Request</title>
   <link rel="stylesheet" href="styles.css"/>
 </head>
@@ -10,43 +10,68 @@
   <!-- NAVIGATION -->
   <nav class="nav-bar">
     <ul>
-      <li><a href="index.html"          class="nav-link">Home</a></li>
-      <li><a href="mission.html"        class="nav-link">Our Mission</a></li>
-      <li><a href="services.html"       class="nav-link">How We Help</a></li>
-      <li><a href="sample-request.html" class="nav-link active">Sample Request</a></li>
-      <li><a href="contact.html"        class="nav-link">Contact</a></li>
-      <li><a href="client-upload.html"  class="nav-link">Client Portal</a></li>
-      <li><a href="privacy-policy.html" class="nav-link">Privacy Policy</a></li>
+      <li><a href="index.html"            class="nav-link">Home</a></li>
+      <li><a href="mission.html"          class="nav-link">Our Mission</a></li>
+      <li><a href="services.html"         class="nav-link">How We Help</a></li>
+      <li><a href="sample-request.html"   class="nav-link active">Sample Request</a></li>
+      <li><a href="contact.html"          class="nav-link">Contact</a></li>
+      <li><a href="client-upload.html"    class="nav-link">Client Upload</a></li>
     </ul>
   </nav>
 
   <!-- LOGO HEADER -->
   <header class="logo-header">
-    <img src="images/ClaimWrit-Logo.jpg"
-         alt="ClaimWrit Logo – Clarity · Structure · Resolution"
-         class="logo"/>
+    <img
+      src="images/ClaimWrit-Logo.jpg"
+      alt="ClaimWrit Logo — Clarity · Structure · Resolution"
+      class="logo"
+    />
     <p class="subline">Clarity · Structure · Resolution</p>
   </header>
 
-  <!-- MAIN CONTENT -->
+  <!-- SAMPLE REQUEST FORM -->
   <main class="section">
     <h2>Request a Sample Demand Letter</h2>
-    <p>Submit your info below to receive a complimentary redacted demand letter.</p>
+    <p>Submit your information below to receive a complimentary redacted demand letter.</p>
 
     <form name="sample-request" method="POST" data-netlify="true">
       <input type="hidden" name="form-name" value="sample-request"/>
 
       <label for="name">Your Name *</label>
-      <input id="name" name="name" required/>
+      <input type="text" id="name" name="name" required/>
 
       <label for="phone">Your Phone *</label>
-      <input id="phone" name="phone" required/>
+      <input type="tel" id="phone" name="phone" required/>
 
       <label for="email">Your Email *</label>
-      <input id="email" name="email" type="email" required/>
+      <input type="email" id="email" name="email" required/>
 
       <label for="firm">Law Firm (optional)</label>
-      <input id="firm" name="firm"/>
+      <input type="text" id="firm" name="firm"/>
 
-      <label for="demandType">Type of Demand *</label>
+      <label for="demandType">Type of Sample Demand *</label>
       <select id="demandType" name="demandType" required>
+        <option value="">-- Please choose an option --</option>
+        <option value="Bodily Injury - Auto (MVA)">Bodily Injury - Auto (MVA)</option>
+        <option value="Passenger Injury - Auto (MVA)">Passenger Injury - Auto (MVA)</option>
+        <option value="Global Demand - Multiple Clients (MVA)">Global Demand - Multiple Clients (MVA)</option>
+        <option value="Uninsured Motorist">Uninsured Motorist</option>
+        <option value="Trip & Fall">Trip & Fall</option>
+        <option value="Slip & Fall">Slip & Fall</option>
+        <option value="Premises Liability - Waterpark">Premises Liability - Waterpark</option>
+        <option value="Assault & Battery">Assault & Battery</option>
+        <option value="Scooter Hit by Vehicle">Scooter Hit by Vehicle</option>
+        <option value="Wrongful Death">Wrongful Death</option>
+      </select>
+
+      <button type="submit">Request Sample</button>
+    </form>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <p>© 2025 ClaimWrit d/b/a Envisage Companies LLC · Fort Lauderdale, FL</p>
+    <p><a href="privacy-policy.html">Privacy Policy</a></p>
+  </footer>
+</body>
+</html>
