--- a/mission.html
+++ b/mission.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ClaimWrit – Our Mission & Expertise</title>
 
   <!-- Shared styles -->
-  <link rel="stylesheet" href="styles.css"/>
+  <link rel="stylesheet" href="styles.css" />
 
-  <!-- Remove default focus outlines; keep accessible focus-visible -->
+  <!-- Accessible focus styling -->
   <style>
-    a:focus, button:focus, input:focus, textarea:focus, select:focus {
+    a:focus,
+    button:focus,
+    input:focus,
+    textarea:focus,
+    select:focus {
       outline: none;
     }
     :focus-visible {
@@ -19,16 +23,17 @@
     }
   </style>
 </head>
+
 <body>
   <!-- NAVIGATION -->
   <nav class="nav-bar">
     <ul>
-      <li><a href="index.html"            class="nav-link">Home</a></li>
-      <li><a href="mission.html"          class="nav-link active">Our Mission</a></li>
-      <li><a href="services.html"         class="nav-link">How We Help</a></li>
-      <li><a href="sample-request.html"   class="nav-link">Sample Request</a></li>
-      <li><a href="contact.html"          class="nav-link">Contact</a></li>
-      <li><a href="client-upload.html"    class="nav-link">Client Upload</a></li>
+      <li><a href="index.html" class="nav-link">Home</a></li>
+      <li><a href="mission.html" class="nav-link active">Our Mission</a></li>
+      <li><a href="services.html" class="nav-link">How We Help</a></li>
+      <li><a href="sample-request.html" class="nav-link">Sample Request</a></li>
+      <li><a href="contact.html" class="nav-link">Contact</a></li>
+      <li><a href="client-upload.html" class="nav-link">Client Upload</a></li>
     </ul>
   </nav>
 
